<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Livro"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
        <EditText
            android:id="@+id/livro1"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/titulodolvro"
            android:textColorLink="@color/colorPrimaryDark"
            tools:ignore="LabelFor,TextFields"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="59dp"/>

        <TextView
            android:id="@+id/reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reserve_uma_data"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/data1"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="textPersonName"
            android:text="@string/selecione_o_dia_para_buscar"
            android:textColorLink="@color/colorPrimaryDark"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="59dp" />

        <TextView
            android:id="@+id/cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/codigo"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
        <EditText
            android:id="@+id/campocod"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/codigodacompra"
            android:inputType="textPersonName"
            android:text="@string/CodCompra"
            android:textColorLink="@color/colorPrimaryDark"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="59dp" />

        <Button
            android:id="@+id/btcomprar"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="16dp"
            android:background="#70dbfe"
            android:text="@string/comp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btcancelar"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:background="#05325f"
            android:text="@string/can"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>