<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:contentDescription="@string/app_name"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo_m" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#dedddd"
                    android:drawableLeft="@drawable/ic_acc"
                    android:drawableStart="@drawable/ic_acc"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:typeface="normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#dedddd"
                    android:drawableLeft="@drawable/ic_sen"
                    android:drawableStart="@drawable/ic_sen"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="16dp"
                android:background="#70dbfe"
                android:onClick="pg"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n_cadastro"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:selectAllOnFocus="false"
                android:textIsSelectable="false"
                android:text="@string/n_cad"
                android:textSize="14sp"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/btcadastro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="16dp"
                android:background="#05325f"
                android:onClick="cadastro"
                android:text="@string/cadastro"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/esq_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/esqueceu_a_senha_clique_aqui"
                android:textColor="#077ea9"
                android:textIsSelectable="false"
                android:textSize="12sp"
                tools:ignore="LabelFor,TextFields" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>