<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    tools:style="@style/CardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:padding="10dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/item_imagem"
            android:layout_width="1dp"
            android:layout_height="128dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/img1"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/item_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="45dp"
                android:background="#70dbfe"
                android:text="@string/comprar" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_preco"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:background="@drawable/capsule"
            android:gravity="center"
            android:text="@string/preco"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v7.widget.CardView>