<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/cadastro"
    tools:context=".CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:layout_marginTop="20dp"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/camponome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:contentDescription="@string/nome"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/camposenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/campotelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/telefone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone2"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/campotelefone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/campoemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/observacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campos_obrigat_rios"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/holo_red_dark"
                android:translationX="230dp" />

            <TextView
                android:id="@+id/colaborador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para_tornar_se_colaborador"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rua"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/camporua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="textPostalAddress"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/bairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bairro"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/campobairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />

            <EditText
                android:id="@+id/camponum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/complem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complem"
                android:textColorLink="@android:color/holo_blue_dark"
                tools:textColor="@android:color/black" />


            <EditText
                android:id="@+id/campocomplem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:background="#dedddd"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor"
                android:layout_marginStart="10dp" />

                <Button
                    android:id="@+id/btcad"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginTop="16dp"
                    android:background="#70dbfe"
                    android:text="@string/cad"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btcancel"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="30dp"
                    android:background="#05325f"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>


